# agentFlow

./: .env  .env.example  README.md  alembic.ini  pyproject.toml
agentflow/: __init__.py  cli.py  config.py
agentflow/db/: __init__.py  models.py  session.py
agentflow/evaluators/: __init__.py  base.py  exact_match.py  registry.py
agentflow/providers/: __init__.py  base.py  fake.py  openai_compatible.py  registry.py
agentflow/schemas/: __init__.py  agent_config.py
agentflow/services/: __init__.py  agent_queries.py  agent_registry.py  agent_runner.py  artifact_service.py  batch_service.py  db_migrations.py  eval_service.py  external_runner.py  fake_provider.py  import_export_service.py  label_service.py  preset_service.py  retry_policy.py  run_actions.py  run_code_changes.py  run_compare.py  run_events.py  run_queries.py  runtime_validation.py  secret_resolution.py  stats_queries.py  worker_jobs.py  worker_ops.py  yaml_loader.py
agentflow/sql/migrations/: 0001_create_agent_tables.sql  0002_create_agent_runs.sql  0003_create_run_events.sql  0004_add_run_retry_fields.sql  0005_add_run_lineage.sql  0006_labels_and_presets.sql  0007_run_batches.sql  0008_run_evaluations.sql  0009_run_artifacts.sql  0010_worker_ops.sql  0011_run_code_changes.sql
agentflow/tools/: __init__.py  base.py  echo.py  registry.py
agentflow/utils/: __init__.py  hashing.py
agentflow/viewer/: __init__.py  main.py
agentflow/viewer/static/: styles.css
agentflow/viewer/templates/: agent_detail.html  (+11 more)
alembic/: env.py
alembic/versions/: 0001_create_agent_tables.py
docs/: testing.md
examples/: external-cli-agent.yaml  invalid-agent.yaml  text-agent-echo.yaml  text-agent-invalid-provider.yaml  text-agent-invalid-secret-ref.yaml  text-agent-invalid-timeout.yaml  text-agent-openai-compatible.yaml  text-agent-openai-missing-secret.yaml  text-agent-retry.yaml  text-agent-unknown-tool.yaml  text-agent-v2.yaml  text-agent.yaml
tests/: conftest.py  test_agent_registration.py  test_agent_schema.py  test_artifacts.py  test_dashboard_code_changes.py  test_evaluator_exact_match.py  test_external_runner.py  test_import_export.py  test_run_lifecycle.py
