[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow"
version = "0.1.0"
description = "Phase 1 YAML agent schema validation CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
]

[project.scripts]
createAgent = "agentflow.cli:main"
agentflow = "agentflow.cli:main"

[tool.setuptools.packages.find]
include = ["agentflow*"]
